<resources>
    <string name="app_name">SagarUnnati</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="test">hishfioadfihsiodfhokc ajdoajdojaosdas123IKCKDN12KDC JDASDZKDNKNDKNAKKDVKDSVKDSNVK 21B3KJ12KJBKJBVKJDSNJSNSD KSJNSDNCNFSKDn1`2k123kn sknclksdnk Final string complete</string>


    <!--    Button name-->
    <string name="btn_log_in">Log In</string>
    <string name="btn_reg_submit">Submit</string>


    <!--    TextView  text-->

    <!--    Default Action Bar-->
    <string name="tv_default_action_bar_name">Sagar Unnati</string>
    <string name="tv_default_action_bar_logout">Logout</string>

    <!--    Login-->
    <string name="tv_login_forget_password">Forget Password!</string>
    <string name="tv_login_register">Register</string>

    <!--    After Login Message-->
    <string name="tv_login_successful">Login Successful</string>
    <string name="tv_login_scr_performance">Performance</string>
    <string name="tv_login_scr_gallery">Gallery</string>
    <string name="tv_login_scr_contact_us">Contact Us</string>
    <string name="tv_login_scr_about_us">About Us</string>

    <!--    Register-->
    <string name="tv_reg_name">Name</string>
    <string name="tv_reg_email">Email</string>
    <string name="tv_reg_phone_number">Phone Number</string>
    <string name="tv_reg_port">Port</string>
    <string name="tv_reg_port_name">Port Name</string>

    <string name="tv_dvp">Daily Vessel Position</string>
    <string name="tv_dvp_s_no">Sl. No.</string>
    <string name="tv_dvp_name_of_port">Name of Port</string>
    <string name="tv_dvp_no_of_vessels">Number of Vessels</string>
    <string name="tv_dvp_at_berth">At Berth ( Working Vessels and Vessels Waiting for Sailing )</string>
    <string name="tv_dvp_at_anchorage">At Anchorage ( Waiting for Berthing )</string>
    <string name="tv_dvp_reason_for_waiting">Reason For Waiting</string>

    <string name="tv_traffic">Traffic</string>
    <string name="tv_traffic_port">Ports</string>
    <string name="tv_traffic_date">APRIL TO JULY 2019*</string>


    <string name="tv_tcw">Traffic - Commodity Wise</string>
    <string name="tv_tcw_ports">PORTS</string>
    <string name="tv_tcw_period">PERIOD</string>
    <string name="tv_tcw_pol">P.O.L.(Crude, Prod., LPG/LNG)</string>
    <string name="tv_tcw_other_liquid">Other Liquids</string>
    <string name="tv_tcw_iron_ore">Iron Ore Incl. Pellets</string>
    <string name="tv_tcw_fertilizers">Fertilizers</string>
    <string name="tv_tcw_fin">FIN</string>
    <string name="tv_tcw_raw">RAW</string>
    <string name="tv_tcw_coal">Coal</string>
    <string name="tv_tcw_thermal_steam">Thermal &amp; Steam</string>
    <string name="tv_tcw_coking_others">Coking &amp; Others</string>
    <string name="tv_tcw_containers">Containers</string>
    <string name="tv_tcw_tonnage">Tonnage</string>
    <string name="tv_tcw_teus">TEUs</string>
    <string name="tv_tcw_others_misc_carg">Other Misc. Carg</string>
    <string name="tv_tcw_total">TOTAL</string>
    <string name="tv_tcw_variation">Variation</string>

    <string name="tv_att">Average Turnaround Time</string>
    <string name="tv_att_ports">PORTS</string>
    <string name="tv_att_period">PERIOD</string>
    <string name="tv_att_dry_bulk">DRY BULK</string>
    <string name="tv_att_mech">MECH.</string>
    <string name="tv_att_conv">CONV.</string>
    <string name="tv_att_liquid_bulk">LIQUID BULK</string>
    <string name="tv_att_break_bulk">BREAK BULK</string>
    <string name="tv_att_container">CONTAINER</string>
    <string name="tv_att_total">TOTAL</string>

    <string name="tv_aopsb">Average Turnaround Time</string>
    <string name="tv_aopsb_ports">PORTS</string>
    <string name="tv_aopsb_period">PERIOD</string>
    <string name="tv_aopsb_dry_bulk">DRY BULK</string>
    <string name="tv_aopsb_mech">MECH.</string>
    <string name="tv_aopsb_conv">CONV.</string>
    <string name="tv_aopsb_liquid_bulk">LIQUID BULK</string>
    <string name="tv_aopsb_break_bulk">BREAK BULK</string>
    <string name="tv_aopsb_container">CONTAINER</string>
    <string name="tv_aopsb_total">TOTAL</string>

    <string name="tv_aoct">Annual Overseas &amp; Coastal Traffic</string>
    <string name="tv_aoct_ports">PORTS</string>
    <string name="tv_aoct_period">PERIOD</string>
    <string name="tv_aoct_overseas">OVERSEAS</string>
    <string name="tv_aoct_overseas_unloaded">Unloaded</string>
    <string name="tv_aoct_overseas_loaded">Loaded</string>
    <string name="tv_aoct_overseas_transhipment">Transhipment</string>
    <string name="tv_aoct_overseas_total">Total</string>
    <string name="tv_aoct_coastal">COASTAL</string>
    <string name="tv_aoct_coastal_unloaded">Unloaded</string>
    <string name="tv_aoct_coastal_loaded">Loaded</string>
    <string name="tv_aoct_coastal_transhipment">Transhipment</string>
    <string name="tv_aoct_coastal_total">Total</string>
    <string name="tv_aoct_total">Total</string>
    <string name="tv_aoct_total_unloaded">Unloaded</string>
    <string name="tv_aoct_total_loaded">Loaded</string>
    <string name="tv_aoct_total_transhipment">Transhipment</string>
    <string name="tv_aoct_total_total">Total</string>


    <string name="tv_pus_sagar_mala_program">Sagarmala Programme</string>
    <string name="tv_pus_values">Values</string>
    <string name="tv_pus_project_cost">Project Cost (Rs Cr.)</string>

    <string name="tv_sb_sagar_mala_beneficiaries">Sagarmala Beneficiaries</string>
    <string name="tv_sb_sagar_mala_program">Sagarmala Programme</string>
    <string name="tv_sb_number">Number</string>


    <!--    Hint Edit text-->

    <!--    Login-->
    <string name="edt_login_hint_enter_email_address">Email Address</string>
    <string name="edt_login_hint_enter_password">Enter Password</string>

    <!--    Register-->
    <string name="edt_reg_hint_enter_name">Enter Name</string>
    <string name="edt_reg_hint_enter_email">Enter Email</string>
    <string name="edt_reg_hint_enter_phone_number">Enter Phone Number</string>


    <string name="about_us_message">Maritime Transport is a critical infrastructure for the social and economic development of a country. It influences the pace, structure and pattern of development. The Department of Shipping encompasses within its fold shipping and ports sectors which include shipbuilding and ship-repair, major ports, national waterways, and inland water transport. Department of
        Shipping has been entrusted with the responsibility to formulate policies and programmes on these subjects and their implementation.

A comprehensive policy package is necessary to address the diverse issues facing the Maritime transport sector. The capacity of the ports in terms of their berths and cargo handling equipment needs to be vastly improved to cater to the growing requirements of the overseas trade. The shipping industry needs to be enabled to carry higher shares of the sea-borne trade in indigenous bottoms.

Historically, investment in the transport sector, particularly in the ports, have been made by the State mainly because of the large volume of resources required, long gestation periods, uncertain returns and various externalities, both positive and negative, associated with this infrastructure. However, the galloping resource requirements and the concern for managerial efficiency and consumer responsiveness have led to the active involvement of the private sector in infrastructure services in recent times. To encourage private participation, Department of Shipping has laid down comprehensive policy guidelines for private sector participation in the Ports sector.
</string>

    <string name="contact_us_message">Shri Ashok Kumar Vidyarthi, \n
    Room No 15 C- Wing, Shastri Bhavan, \n
    New Delhi-110001 \n
    Email: <a href="mailto:ak.vidyarthi@nic.in">ak.vidyarthi@nic.in</a> \n
    Telephone No: 011-23384072"
</string>
    <string name="filter">Filter</string>
    <string-array name="spinner_year">
        <item>2015-16</item>
        <item>2016-17</item>
        <item>2017-18</item>
        <item>2018-19</item>
        <item>2019-20</item>
    </string-array>
    <string-array name="spinner_month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>
