<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtCstDigRegEnterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_reg_hint_enter_name"
                android:inputType="textPersonName"
                android:background="@drawable/register_form_border"
                android:padding="10dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_email"
                android:textSize="16sp"
                android:layout_marginTop="5dp" />

            <EditText
                android:id="@+id/edtCstDigRegEnterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_reg_hint_enter_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/register_form_border"
                android:padding="10dp"
                android:layout_marginTop="5dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_phone_number"
                android:textSize="16sp"
                android:layout_marginTop="5dp" />

            <EditText
                android:id="@+id/edtCstDigRegEnterPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/edt_reg_hint_enter_phone_number"
                android:inputType="numberDecimal"
                android:background="@drawable/register_form_border"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_port"
                android:textSize="16sp"
                android:layout_marginTop="5dp" />

            <Spinner
                android:id="@+id/edtCstDigRegEnterPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_reg_hint_enter_phone_number"
                android:background="@drawable/register_form_border"
                android:padding="20dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/tvCstDigRegEnterPortOtherName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reg_port_name"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edtCstDigRegEnterPortOtherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/register_form_border"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnCstDigRegSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_reg_submit"
                android:background="@drawable/register_form_btn_submit_border"
                android:layout_marginTop="5dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>