<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_height="60dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/tv_tcw_ports"
                android:textSize="10sp"
                android:gravity="center" />


            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/tv_tcw_period"
                android:textSize="10sp"
                android:gravity="center" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/tv_tcw_pol"
                android:textSize="10sp"
                android:gravity="center" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/tv_tcw_other_liquid"
                android:textSize="10sp"
                android:gravity="center" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/tv_tcw_iron_ore"
                android:textSize="10sp"
                android:gravity="center" />


            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tv_tcw_fin"
                        android:textSize="8sp"
                        android:gravity="center" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/black_overlay" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tv_tcw_raw"
                        android:textSize="8sp"
                        android:gravity="center" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tv_tcw_thermal_steam"
                        android:textSize="8sp"
                        android:gravity="center" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/black_overlay" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tv_tcw_coking_others"
                        android:textSize="8sp"
                        android:gravity="center" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tv_tcw_tonnage"
                        android:textSize="8sp"
                        android:gravity="center" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/black_overlay" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tv_tcw_teus"
                        android:textSize="8sp"
                        android:gravity="center" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/tv_tcw_others_misc_carg"
                android:textSize="10sp"
                android:gravity="center" />


            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black_overlay" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/tv_tcw_total"
                android:textSize="10sp"
                android:gravity="center" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/black_overlay" />


    </LinearLayout>

</LinearLayout>