<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:orientation="horizontal"
                android:layout_height="60dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tv_aoct_ports"
                    android:textSize="10sp"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black_overlay" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/tv_aoct_period"
                    android:textSize="10sp"
                    android:gravity="center" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black_overlay" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="4">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_overseas_unloaded"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_overseas_loaded"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_overseas_transhipment"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_overseas_total"
                            android:textSize="8sp"
                            android:textStyle="bold"
                            android:gravity="center" />

                    </LinearLayout>


                </LinearLayout>


                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black_overlay" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="4">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_coastal_unloaded"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_coastal_loaded"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_coastal_transhipment"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_coastal_total"
                            android:textSize="8sp"
                            android:gravity="center" />

                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/black_overlay" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="4">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_total_unloaded"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_total_loaded"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_total_transhipment"
                            android:textSize="8sp"
                            android:gravity="center" />

                        <View
                            android:layout_width="1px"
                            android:layout_height="match_parent"
                            android:background="@color/black_overlay" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:text="@string/tv_aoct_total_total"
                            android:textSize="8sp"
                            android:gravity="center" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black_overlay" />

        </LinearLayout>




</LinearLayout>



